--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ build.mustRunAfter clean
 dependencies {
     // to include the servlet libraries
     providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.7.12' // for Mockito
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'com.google.code.gson', name:'gson', version: '2.7'
+
 }
